[project]
name = "runescape"
version = "0.0.0"
description = "The project tries to unify all runescape api's into one package"
readme = "README.md"
authors = [
    { name = "extreme4all", email = "40169115+extreme4all@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
]

[project.scripts]
runescape = "runescape:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.1",
]
